Add copyright headers

--- a/integration_tests/etc/node.properties
+++ b/integration_tests/etc/node.properties
@@ -1,3 +1,4 @@
+# Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved
 node.environment=test
 node.id=test
 node.data-dir=/var/lib/presto/data
