--- a/integration_tests/etc/config.properties
+++ b/integration_tests/etc/config.properties
@@ -1,3 +1,4 @@
+# Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved
 coordinator=true
 node-scheduler.include-coordinator=true
 http-server.http.port=8080
