--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ services:
   - docker
 install:
   - go get -v golang.org/x/tools/cmd/cover
+  - go get -v gopkg.in/jcmturner/gokrb5.v6/...
 script:
   - ./integration_tests/run.sh
